--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,2 +1,22 @@
 header.header 
-    p Компонент шапки сайта
+    .container.header__row 
+        .header__points 
+            .circle.first
+            .circle.first
+            .circle.first
+            .circle.first  
+        a.header__img-a(href="#") 
+            img.header__img(src="./assets/imgs/logo.svg", alt="картинка")
+        .header__links 
+            ul.header__ul 
+                li.header__li 
+                    a.header__a(href="#") For Men
+                li.header__li 
+                    a.header__a(href="#") For Women
+                li.header__li 
+                    a.header__a(href="#") For Kids
+                li.header__li 
+                    a.header__a(href="#") For Anyone
+                li.header__li 
+                    a.header__a(href="#") For No-one
+        
