--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
         //- здесь компоненты страницы
         include components/header
         .main 
-            
+            include components/hatters-section
         include components/footer
 
 
