--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -1,3 +1,57 @@
 // для каждого компонента нужно импортить переменные, чтобы их использовать
 @import "../utils/parameters";
 @import "../utils/mixins";
+
+.header {
+
+    &__row {
+        padding: 2.5rem 0 2rem 0;
+        text-align: center;
+        
+    }
+
+    &__points {
+        margin: 0 auto;
+        width: 1.2rem;
+        height: 1.2rem;
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 3rem;
+    }
+
+    &__img {
+        margin-bottom: 2.6rem;
+    }
+
+    &__links {
+        
+    }
+
+    &__ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    &__li {
+        
+    }
+
+    &__a {
+        font-size: 1.6rem;
+        line-height: 2;
+        color: $c-text;
+        margin: 0 3.3rem;
+    }
+}
+
+.circle {
+    width: 0.3rem;
+    height: 0.3rem;
+    border-radius: 5rem;
+    margin: 0.15rem;
+}
+
+.first {
+    background-color: rgba(35, 36, 44, 0.3);
+}
