--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,3 +10,9 @@
 // дальше можно писать все стили сайта в этот файл, или писать их в компонентах
 @import './components/header.scss';
 @import './components/hatters-section.scss';
+@import './components/list-section.scss';
+@import './components/headwear-section.scss';
+@import './components/our-range-section.scss';
+@import './components/quote-section.scss';
+@import './components/newsletter-section.scss';
+@import './components/footer.scss';
