--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,2 +1,35 @@
 footer.footer
-    p Футер страницы
+    .container.footer__row 
+        .footer__blocks
+            .footer__img
+                .footer__points.points
+                    .circle.third
+                    .circle.third
+                    .circle.third
+                    .circle.third
+                a.footer__logo(href="#") 
+                    img.footer__logo-img(src="./assets/imgs/img15.svg", alt="картинка")
+                .footer__text Be better, be cooler, be a Mad Hatter and sustainably matter.
+            .footer__links
+                mixin links(title, a1, a2, a3, a4, a5)
+                    .footer__block
+                        .footer__title=title
+                            .footer__points.points
+                                .circle.third
+                                .circle.third
+                                .circle.third
+                                .circle.third
+                        ul.footer__ul 
+                            li.footer__li 
+                                a.footer__a(href="#")=a1 
+                            li.footer__li 
+                                a.footer__a(href="#")=a2 
+                            li.footer__li 
+                                a.footer__a(href="#")=a3 
+                            li.footer__li 
+                                a.footer__a(href="#")=a4 
+                            li.footer__li 
+                                a.footer__a(href="#")=a5 
+                +links('Shop here','For Men','For Women','For Kids','For Anyone','For No-one')
+                +links('The legals','Copyright','Privacy','Contact','Terms','')
+        .footer__description Copyright 2012 Mad Hatters, Inc. Terms & Privacy
