--- a/src/pug/components/hatters-section.pug
+++ b/src/pug/components/hatters-section.pug
@@ -1,5 +1,4 @@
 section.hatters-section
-    hr.hatters-section__hr
     mixin line()
         .lines
             .lines__block-first
@@ -7,7 +6,7 @@ section.hatters-section
             .lines__block
             .lines__block
             .lines__block
-    //+line()
+    +line()
     .container.hatters-section__row
         .hatters-section__content 
             .hatters-section__description Introducing
@@ -16,9 +15,11 @@ section.hatters-section
                 span /
                 sub c
                 | style matters
-            .hatters-section__buttons
-                a.hatters-section__button(href="#") Learn more
-                .hatters-section__block
+            mixin btn(text)
+                .hatters-section__buttons
+                    a.hatters-section__button(href="#")=text 
+                    .hatters-section__block
+            +btn('Learn more')
         .hatters-section__imgs 
             img.hatters-section__img1(src="./assets/imgs/img2.jpg", alt="картинка")
             img.hatters-section__img2(src="./assets/imgs/img3.png", alt="картинка")
