--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,13 +1,13 @@
 header.header 
     .container.header__row 
-        .header__points 
+        .header__points.points
             .circle.first
             .circle.first
             .circle.first
             .circle.first  
         a.header__img-a(href="#") 
             img.header__img(src="./assets/imgs/logo.svg", alt="картинка")
-        .header__links 
+        nav.header__links 
             ul.header__ul 
                 li.header__li 
                     a.header__a(href="#") For Men
