--- a/src/assets/scss/components/hatters-section.scss
+++ b/src/assets/scss/components/hatters-section.scss
@@ -1,18 +1,13 @@
 @import "../utils/parameters";
 
 .hatters-section {
-    &__hr {
-        margin: 0rem 0 0 0;
-        position: absolute;
-        width: 100vw;
-        opacity: 0.1;
-    }
+    border-top: 2px solid #EDEDED;
 
     &__row {
         display: flex;
         flex-wrap: wrap;
-        padding-top: 14rem;
-        padding-bottom: 25rem;
+        padding-top: 13.8rem;
+        margin-bottom: 25rem;
     }
 
     &__content {
@@ -24,6 +19,7 @@
         font-size: 16px;
         line-height: 24px;
         color: $c-text2;
+        padding-left: 0.3rem;
     }
 
     &__title {
@@ -32,12 +28,16 @@
         font-size: 10.2rem;
         line-height: 1.08;
         color: $c-text;
-        max-width: 71.5rem;
-        margin-bottom: 4rem;
+        max-width: 71.8rem;
+        margin-bottom: 3.6rem;
 
         sup, sub, span {
             font-size: 4.352rem;
             line-height: 40%;
+        }
+
+        span {
+            vertical-align: middle;
         }
     }
 
@@ -55,7 +55,7 @@
         border: 0.1rem solid #CFADAC;
         box-sizing: border-box;
         border-radius: 0.6rem;
-        padding: 1.4rem 4.5rem;
+        padding: 1.7rem 4.8rem;
         display: inline-block;
         background: #FFFFFF;
     }
@@ -102,7 +102,7 @@
         position: absolute;
         bottom: -15.2rem;
         left: -24rem;
-        z-index: -1;
+        z-index: -2;
         width: 51.8rem;
         height: 51.8rem;
         border-radius: 50rem;
