--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,8 +9,13 @@ html(lang="en")
     body.wrapper 
         //- здесь компоненты страницы
         include components/header
-        .main 
+        .main
             include components/hatters-section
+            include components/list-section
+            include components/headwear-section
+            include components/our-range-section
+            include components/quote-section
+            include components/newsletter-section
         include components/footer
 
 
