--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,6 +1,6 @@
 header.header 
     .container.header__row 
-        .header__points.points
+        //.header__points.points
             .circle.first
             .circle.first
             .circle.first
