--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -13,18 +13,32 @@
     }
 
     &__img {
-        position: relative;
         width: 50%;
         padding-top: 1rem;
     }
 
-    &__points {
+    &__logo::before {
+        content: '';
+        width: 0.9rem;
+        height: 0.9rem;
+        background: url("../imgs/img5.svg");
+        top: -3.4rem;
+        left: -2.1rem;
         position: absolute;
+    }
+
+    &__title::before {
+        content: '';
+        width: 0.9rem;
+        height: 0.9rem;
+        background: url("../imgs/img5.svg");
         top: 1rem;
         left: -2.3rem;
+        position: absolute;
     }
     
     &__logo {
+        position: relative;
     }
 
     &__logo-img {
@@ -80,6 +94,50 @@
     }
 }
 
-.third {
-    background-color:  #FAF7F3;
+@media screen and (max-width: $md) {
+    .footer {
+        padding: 13rem 0 9rem 0rem;
+        &__img {
+            width: 40%;
+            padding-top: 1rem;
+        }
+
+        &__links {
+            width: 60%;
+            justify-content: center;
+            padding: 0.4rem 0 0 0rem;
+        }
+
+        &__block {
+            margin: 0 3rem;
+        }
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .footer {
+        padding: 13rem 0 5rem 0rem;
+        &__img {
+            justify-content: center;
+            width: 100%;
+            text-align: center;
+            padding-top: 0rem;
+        }
+
+        &__links {
+            width: 100%;
+            justify-content: center;
+            padding: 0.4rem 0 0 0rem;
+        }
+
+        &__block {
+            margin: 0 4rem 3rem 4rem;
+        }
+
+        &__text {
+            margin: 0 auto;
+            margin-bottom: 5rem;
+            max-width: 55rem;
+        }
+    }
 }
