--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -8,10 +8,13 @@
         padding-top: 6.8rem;
         padding-bottom: 2rem;
         text-align: center;
-        
     }
 
-    &__points {
+    &__row::before {
+        content: '';
+        width: 0.9rem;
+        height: 0.9rem;
+        background: url("../imgs/img1.svg");
         top: 2.7rem;
         left: 0;
         right: 0;
@@ -43,22 +46,4 @@
         color: $c-text;
         margin: 0 3.3rem;
     }
-}
-
-.points {
-    width: 1.2rem;
-    height: 1.2rem;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.circle {
-    width: 0.3rem;
-    height: 0.3rem;
-    border-radius: 5rem;
-    margin: 0.15rem;
-}
-
-.first {
-    background-color: rgba(35, 36, 44, 0.3);
 }
