--- a/src/assets/scss/components/newsletter-section.scss
+++ b/src/assets/scss/components/newsletter-section.scss
@@ -5,7 +5,7 @@
     z-index: -3;
     &__row {
         text-align: center;
-        padding: 7rem 0 7.3rem 0;
+        padding: 7rem 1.5rem 7.3rem 1.5rem;
     }
 
     &__description {
@@ -54,5 +54,37 @@
         padding: 2rem 6rem 0px 6.5rem;
         display: inline-block;
         background: #FFFFFF;
+    }
+}
+
+@media screen and (max-width: $md) {
+    .newsletter-section {
+        &__title {
+        font-size: 9rem;
+        }
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .newsletter-section {
+        &__title {
+        font-size: 8.4rem;
+        }
+
+        &__input {
+            margin-bottom: 3rem;
+        }    
+
+        &__a {
+            padding: 2rem 6rem 2rem 6.5rem;
+        }
+    }
+}
+
+@media screen and (max-width: $xs) {
+    .newsletter-section {
+        &__title {
+        font-size: 6rem;
+        }
     }
 }
