--- a/src/pug/components/headwear-section.pug
+++ b/src/pug/components/headwear-section.pug
@@ -4,5 +4,5 @@ section.headwear-section
             img.headwear-section__img(src="./assets/imgs/img6.jpg", alt="картинка")
         .headwear-section__text 
             .headwear-section__description Become sexy
-            .headwear-section__title Mad love for f ire headwear
+            .headwear-section__title Mad love for f&thinsp;ire headwear
             +btn('Learn more')
