--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -86,6 +86,10 @@
         color: #FFFFFF;
     }
 
+    &__a:hover {
+        color: $c-text2;
+    }
+
     &__description {
         padding-left: 0.5rem;
         font-size: 1.6rem;
