--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,10 +1,5 @@
 header.header 
-    .container.header__row 
-        //.header__points.points
-            .circle.first
-            .circle.first
-            .circle.first
-            .circle.first  
+    div.container.header__row   
         a.header__img-a(href="#") 
             img.header__img(src="./assets/imgs/logo.svg", alt="картинка")
         nav.header__links 
