--- a/src/pug/components/list-section.pug
+++ b/src/pug/components/list-section.pug
@@ -1,9 +1,9 @@
 section.list-section
-    .container.list-section__row
+    div.container.list-section__row
         mixin list(title)
-            .list-section__blocks
-                .list-section__title=title
-                .list-section__description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vestibulum.
+            div.list-section__blocks
+                div.list-section__title=title
+                div.list-section__description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vestibulum.
         +list('Brands')
         +list('Styles')
         +list('Colors')
