--- a/src/pug/components/newsletter-section.pug
+++ b/src/pug/components/newsletter-section.pug
@@ -1,7 +1,7 @@
 section.newsletter-section
-    .container.newsletter-section__row 
-        .newsletter-section__description Keep up-to-date on us
-        .newsletter-section__title Newsletter
-        .newsletter-section__email
+    div.container.newsletter-section__row 
+        div.newsletter-section__description Keep up-to-date on us
+        div.newsletter-section__title Newsletter
+        div.newsletter-section__email
             input.newsletter-section__input(type="email" placeholder="Enter your email")
             a.newsletter-section__a(href="#") Submit
