--- a/src/pug/components/our-range-section.pug
+++ b/src/pug/components/our-range-section.pug
@@ -1,24 +1,24 @@
 section.our-range-section
-    .container.our-range-section__row 
-        .our-range-section__description Hat’s that bring the fire
-        .our-range-section__title Our Range
-        .our-range-section__imgs-text
+    div.container.our-range-section__row 
+        div.our-range-section__description Hat’s that bring the fire
+        div.our-range-section__title Our Range
+        div.our-range-section__imgs-text
             mixin imgs(img, title)
-                .our-range-section__block
-                    .our-range-section__imgs-row 
+                div.our-range-section__block
+                    div.our-range-section__imgs-row 
                         img.our-range-section__img(src=img, alt="картинка")
-                    .our-range-section__text-block
-                        .our-range-section__imgs-title=title 
-                        .our-range-section__imgs-description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vestibulum.
+                    div.our-range-section__text-block
+                        div.our-range-section__imgs-title=title 
+                        div.our-range-section__imgs-description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vestibulum.
             +imgs('./assets/imgs/img7.png','The pretender')
-            .our-range-section__margin
+            div.our-range-section__margin
                 +imgs('./assets/imgs/img8.png','The influencer')
             +imgs('./assets/imgs/img9.png','The andy cap')
-            .our-range-section__margin
+            div.our-range-section__margin
                 +imgs('./assets/imgs/img10.png','The traveller')
-        .our-range-section__show-more
-            .our-range-section__hr 
-            .our-range-section__text-more 
+        div.our-range-section__show-more
+            div.our-range-section__hr 
+            div.our-range-section__text-more 
                 a.our-range-section__text-more-a(href="#") + Show more 
-            .our-range-section__hr
-            .our-range-section__title-more More
+            div.our-range-section__hr
+            div.our-range-section__title-more More
