--- a/src/assets/scss/components/hatters-section.scss
+++ b/src/assets/scss/components/hatters-section.scss
@@ -1,5 +1,11 @@
 @import "../utils/parameters";
 
+@keyframes bt {
+    from {opacity: 1;}
+    50% {opacity: 0;}
+    to {opacity: 1;}
+}
+
 .hatters-section {
     border-top: 2px solid #EDEDED;
 
@@ -71,6 +77,11 @@
         bottom: 0;
         left: 0;
         right: 0;
+        display: inline-block;
+    }
+
+    &__block {
+        animation: bt 2s infinite linear;
     }
 
     &__imgs {
