--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,14 +1,14 @@
 footer.footer
-    .container.footer__row 
-        .footer__blocks
-            .footer__img
+    div.container.footer__row 
+        div.footer__blocks
+            div.footer__img
                 a.footer__logo(href="#") 
                     img.footer__logo-img(src="./assets/imgs/img15.svg", alt="картинка")
-                .footer__text Be better, be cooler, be a Mad Hatter and sustainably matter.
-            .footer__links
+                div.footer__text Be better, be cooler, be a Mad Hatter and sustainably matter.
+            div.footer__links
                 mixin links(title, a1, a2, a3, a4, a5)
-                    .footer__block
-                        .footer__title=title
+                    div.footer__block
+                        div.footer__title=title
                         ul.footer__ul 
                             li.footer__li 
                                 a.footer__a(href="#")=a1 
@@ -22,4 +22,4 @@ footer.footer
                                 a.footer__a(href="#")=a5 
                 +links('Shop here','For Men','For Women','For Kids','For Anyone','For No-one')
                 +links('The legals','Copyright','Privacy','Contact','Terms','')
-        .footer__description Copyright 2012 Mad Hatters, Inc. Terms & Privacy
+        div.footer__description Copyright 2012 Mad Hatters, Inc. Terms & Privacy
