--- a/src/pug/components/hatters-section.pug
+++ b/src/pug/components/hatters-section.pug
@@ -1,19 +1,19 @@
 section.hatters-section
-    .container.hatters-section__row
-        .hatters-section__content 
-            .hatters-section__description Introducing
+    div.container.hatters-section__row
+        div.hatters-section__content 
+            div.hatters-section__description Introducing
             h1.hatters-section__title Mad hatters, 
                 sup b
                 span /
                 sub c
                 | style matters
             mixin btn(text)
-                .hatters-section__buttons
+                div.hatters-section__buttons
                     a.hatters-section__button(href="#")=text 
-                    .hatters-section__block
+                    div.hatters-section__block
             +btn('Learn more')
-        .hatters-section__imgs 
+        div.hatters-section__imgs 
             img.hatters-section__img1(src="./assets/imgs/img2.jpg", alt="картинка")
             img.hatters-section__img2(src="./assets/imgs/img3.png", alt="картинка")
-            .hatters-section__circle1 
-            .hatters-section__circle2
+            div.hatters-section__circle1 
+            div.hatters-section__circle2
