--- a/src/pug/components/headwear-section.pug
+++ b/src/pug/components/headwear-section.pug
@@ -1,8 +1,8 @@
 section.headwear-section
-    .container.headwear-section__row 
-        .headwear-section__img-row 
+    div.container.headwear-section__row 
+        div.headwear-section__img-row 
             img.headwear-section__img(src="./assets/imgs/img6.jpg", alt="картинка")
-        .headwear-section__text 
-            .headwear-section__description Become sexy
-            .headwear-section__title Mad love for f&thinsp;ire headwear
+        div.headwear-section__text 
+            div.headwear-section__description Become sexy
+            div.headwear-section__title Mad love for f&thinsp;ire headwear
             +btn('Learn more')
