--- a/src/pug/components/quote-section.pug
+++ b/src/pug/components/quote-section.pug
@@ -1,7 +1,7 @@
 section.quote-section
-    .container.quote-section__row
-        .quote-section__title In quoting others we cite ourselves
+    div.container.quote-section__row
+        div.quote-section__title In quoting others we cite ourselves
             img.quote-section__img1(src="./assets/imgs/img11.svg", alt="картинка")
             img.quote-section__img2(src="./assets/imgs/img12.svg", alt="картинка")
-            .quote-section__circle1
-            .quote-section__circle2            
+            div.quote-section__circle1
+            div.quote-section__circle2            
