--- a/src/pug/components/hatters-section.pug
+++ b/src/pug/components/hatters-section.pug
@@ -5,7 +5,7 @@ section.hatters-section
             h1.hatters-section__title Mad hatters, 
                 sup b
                 span /
-                sub c
+                sub c&nbsp;
                 | style matters
             mixin btn(text)
                 div.hatters-section__buttons
