--- a/src/pug/components/headwear-section.pug
+++ b/src/pug/components/headwear-section.pug
@@ -4,5 +4,5 @@ section.headwear-section
             img.headwear-section__img(src="./assets/imgs/img6.jpg", alt="картинка")
         div.headwear-section__text 
             div.headwear-section__description Become sexy
-            div.headwear-section__title Mad love for f&thinsp;ire headwear
+            div.headwear-section__title Mad love for f&#8239;ire headwear
             +btn('Learn more')
