--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -5,7 +5,7 @@
 .header {
     position: relative;
     &__row {
-        padding-top: 6.8rem;
+        padding-top: 6.7rem;
         padding-bottom: 2rem;
         text-align: center;
     }
@@ -20,10 +20,6 @@
         right: 0;
         position: absolute;
         margin: 0 auto;
-    }
-
-    &__img {
-        margin-bottom: 2.6rem;
     }
 
     &__links {
@@ -45,5 +41,20 @@
         line-height: 2;
         color: $c-text;
         margin: 0 3.3rem;
+    }
+}
+
+.logo {
+    height: 3rem;
+    margin-bottom: 2.3rem;
+}
+
+.logo:hover {
+    fill: $c-text2;
+}
+
+@media screen and (max-width: $xs) {
+    .logo {
+        max-width: 60vw;
     }
 }
