--- a/src/assets/scss/components/our-range-section.scss
+++ b/src/assets/scss/components/our-range-section.scss
@@ -36,11 +36,8 @@
 
     }
 
-    &__imgs-row {
-
-    }
-
     &__img {
+        max-width: 51.1rem;
     }
 
     &__text-block {
@@ -146,7 +143,7 @@
         }
 
         &__title {
-            font-size: 8.4rem;
+            font-size: 7rem;
         }
 
         &__hr {
@@ -155,6 +152,10 @@
 
         &__title-more {
             font-size: 16rem;
+        }
+
+        &__row {
+            margin-bottom: 40rem;
         }
     }
 }
@@ -166,7 +167,8 @@
         }
 
         &__title {
-            font-size: 7rem;
+            font-size: 4rem;
+            margin-bottom: 4rem;
         }
 
         &__hr {
@@ -174,7 +176,19 @@
         }
 
         &__title-more {
-            font-size: 12rem;
+            font-size: 10rem;
+        }
+
+        &__imgs-title {
+            font-size: 3rem;
+        }
+
+        &__row {
+            margin-bottom: 25rem;
+        }
+
+        &__text-more-a {
+            font-size: 3rem;
         }
     }
 }
