--- a/src/pug/components/hatters-section.pug
+++ b/src/pug/components/hatters-section.pug
@@ -9,7 +9,7 @@ section.hatters-section
                 | style matters
             mixin btn(text)
                 div.hatters-section__buttons
-                    a.hatters-section__button(href="#")=text 
+                    a.hatters-section__button(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=text 
                     div.hatters-section__block
             +btn('Learn more')
         div.hatters-section__imgs 
