--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,18 +1,18 @@
 header.header 
     div.container.header__row   
-        a.header__img-a(href="#") 
+        a.header__img-a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") 
             svg.icon.logo
                 use(xlink:href="./assets/imgs/sprite.svg#logo")
         nav.header__links 
             ul.header__ul 
                 li.header__li 
-                    a.header__a(href="#") For Men
+                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Men
                 li.header__li 
-                    a.header__a(href="#") For Women
+                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Women
                 li.header__li 
-                    a.header__a(href="#") For Kids
+                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Kids
                 li.header__li 
-                    a.header__a(href="#") For Anyone
+                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Anyone
                 li.header__li 
-                    a.header__a(href="#") For No-one
+                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For No-one
         
