--- a/src/pug/components/newsletter-section.pug
+++ b/src/pug/components/newsletter-section.pug
@@ -4,4 +4,4 @@ section.newsletter-section
         div.newsletter-section__title Newsletter
         div.newsletter-section__email
             input.newsletter-section__input(type="email" placeholder="Enter your email")
-            a.newsletter-section__a(href="#") Submit
+            a.newsletter-section__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") Submit
