--- a/src/pug/components/our-range-section.pug
+++ b/src/pug/components/our-range-section.pug
@@ -18,6 +18,6 @@ section.our-range-section
         div.our-range-section__show-more
             div.our-range-section__hr 
             div.our-range-section__text-more 
-                a.our-range-section__text-more-a(href="#") + Show more 
+                a.our-range-section__text-more-a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") + Show more 
             div.our-range-section__hr
             div.our-range-section__title-more More
