--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -2,7 +2,7 @@ footer.footer
     div.container.footer__row 
         div.footer__blocks
             div.footer__img
-                a.footer__logo(href="#") 
+                a.footer__logo(href="https://7lesha.github.io/pr_aleksei/dist/index.html") 
                     svg.icon.logo2
                         use(xlink:href="./assets/imgs/sprite.svg#logo")
                 div.footer__text Be better, be cooler, be a Mad Hatter and sustainably matter.
@@ -12,15 +12,15 @@ footer.footer
                         div.footer__title=title
                         ul.footer__ul 
                             li.footer__li 
-                                a.footer__a(href="#")=a1 
+                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a1 
                             li.footer__li 
-                                a.footer__a(href="#")=a2 
+                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a2 
                             li.footer__li 
-                                a.footer__a(href="#")=a3 
+                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a3 
                             li.footer__li 
-                                a.footer__a(href="#")=a4 
+                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a4 
                             li.footer__li 
-                                a.footer__a(href="#")=a5 
+                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a5 
                 +links('Shop here','For Men','For Women','For Kids','For Anyone','For No-one')
                 +links('The legals','Copyright','Privacy','Contact','Terms','')
         div.footer__description Copyright 2012 Mad Hatters, Inc. Terms & Privacy
