--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -80,6 +80,7 @@
         font-size: 1.6rem;
         line-height: 2;
         color: #FFFFFF;
+        transition: 1s ease;
     }
 
     &__a:hover {
@@ -99,6 +100,7 @@
     width: 24.6rem;
     height: 2.4rem;
     margin-bottom: 3rem;
+    transition: 1s ease;
 }
 
 .logo2:hover {
