--- a/src/assets/scss/components/our-range-section.scss
+++ b/src/assets/scss/components/our-range-section.scss
@@ -38,6 +38,11 @@
 
     &__img {
         max-width: 51.1rem;
+        transition: 1s ease;
+    }
+
+    &__img:hover {
+        transform: scale(1.1, 1.1);
     }
 
     &__text-block {
