--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -12,15 +12,15 @@ footer.footer
                         div.footer__title=title
                         ul.footer__ul 
                             li.footer__li 
-                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a1 
+                                a.footer__a(href="#")=a1 
                             li.footer__li 
-                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a2 
+                                a.footer__a(href="#")=a2 
                             li.footer__li 
-                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a3 
+                                a.footer__a(href="#")=a3 
                             li.footer__li 
-                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a4 
+                                a.footer__a(href="#")=a4 
                             li.footer__li 
-                                a.footer__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html")=a5 
+                                a.footer__a(href="#")=a5 
                 +links('Shop here','For Men','For Women','For Kids','For Anyone','For No-one')
                 +links('The legals','Copyright','Privacy','Contact','Terms','')
         div.footer__description Copyright 2012 Mad Hatters, Inc. Terms & Privacy
