--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -6,13 +6,13 @@ header.header
         nav.header__links 
             ul.header__ul 
                 li.header__li 
-                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Men
+                    a.header__a(href="#") For Men
                 li.header__li 
-                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Women
+                    a.header__a(href="#") For Women
                 li.header__li 
-                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Kids
+                    a.header__a(href="#") For Kids
                 li.header__li 
-                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For Anyone
+                    a.header__a(href="#") For Anyone
                 li.header__li 
-                    a.header__a(href="https://7lesha.github.io/pr_aleksei/dist/index.html") For No-one
+                    a.header__a(href="#") For No-one
         
